--- a/less/style.less
+++ b/less/style.less
@@ -1,5 +1,8 @@
 @import "blocks/normalize.less";
+@import "blocks/swiper.less";
 @import "variables.less";
 @import "global.less";
 @import "blocks/visually-hidden.less";
 
+
+@import "blocks/index.less";
